vlib/v/checker/tests/bin_lit_without_digit_err.vv
fn main() {
    println(0b**)
}
